Wayland client: Fix crash when windows are shown/hidden during drag

Fixes: QTBUG-87624
Change-Id: I1b9443df091878abcd4fbe9c55927cb819aebd59
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit c64c5d3849b40617e1de0295f8690f354cab2b3a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>